@@ -1,3 +1,7 @@
+2020-07-27  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/ball/upnp/RootDevice.java: Initial writing.
+
 2020-07-26  Allen D. Ball  <ball@hcf.dev>
 
 	* src/main/java/ball/upnp/ssdp/SSDPDiscoveryCache.java:
